--- a/pom.xml
+++ b/pom.xml
@@ -290,6 +290,12 @@
       <artifactId>freemarker</artifactId>
       <version>2.3.19</version>
     </dependency>
+    <!--hibernate 相关  -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>3.6.0.Final</version>
+    </dependency>
 
 
   </dependencies>
