--- a/pom.xml
+++ b/pom.xml
@@ -310,9 +310,29 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>8.1.9.v20130131</version>
+        <configuration>
+          <webApp>
+            <contextPath>/${project.artifactId}</contextPath>
+          </webApp>
+          <stopKey>STOP</stopKey>
+          <stopPort>9999</stopPort>
+          <scanIntervalSeconds>5</scanIntervalSeconds>
+        </configuration>
+      </plugin>
     </plugins>
-    <!-- 解决Maven项目编译后classes文件中没有.xml问题 -->
+    <!-- 解决Maven项目编译后classes文件中没有.xml问题-->
     <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/*.*</include>
+        </includes>
+        <filtering>true</filtering>
+      </resource>
       <resource>
         <directory>src/main/java</directory>
         <includes>
